fixed progress bar spacing and changed buttons

--- a/src/main/resources/static/register.css
+++ b/src/main/resources/static/register.css
@@ -23,7 +23,9 @@
     margin-right: 20%;
 }
 
-#description {
+.btn-secondary{
+    border: 1px solid #6096B4;
+
 }
 .clearfix:after {
     clear: both;
@@ -44,24 +46,9 @@
     vertical-align: middle;
 }
 
-/*.nav {*/
-/*    margin-top: 40px;*/
-/*}*/
-
 .pull-right {
     float: right;
 }
-
-/*a, a:active {*/
-/*    color: #333;*/
-/*    text-decoration: none;*/
-/*}*/
-
-/*a:hover {*/
-/*    color: #999;*/
-/*}*/
-
- /*Breadcrups CSS */
 
 .arrow-steps .step {
     font-size: 14px;
@@ -70,7 +57,7 @@
     cursor: default;
     margin: 0 3px;
     padding: 10px 10px 10px 30px;
-    min-width: 180px;
+    min-width: 160px;
     float: left;
     position: relative;
     background-color: #d9e3f7;
@@ -134,9 +121,9 @@
 
 .arrow-steps .step.current {
     color: #fff;
-    background-color: #23468c;
+    background-color: #6096B4;
 }
 
 .arrow-steps .step.current:after {
-    border-left: 17px solid #23468c;
+    border-left: 17px solid #6096B4;
 }
